# notifier_microservice

./: .dockerignore  .env.example  .gitignore  Dockerfile.worker  README.md  docker-compose.yml  pyproject.toml
docs/: ARCHITECTURE.md  FEATURE_SCOPE.md
notifications/: __init__.py  channels.py  types.py
notifications/adapters/: __init__.py  consumer_handler.py  fake_senders.py  kafka_runtime.py  payload.py  real_senders.py
notifications/application/: __init__.py  process.py
notifications/domain/: __init__.py  email.py  sms.py
scripts/: kafka_local_down.sh  kafka_local_status.sh  kafka_local_up.sh  publish_appointment_event.py  run_channel_demo.py  run_consumer_flow_demo.py  run_kafka_email_worker.py
tests/: test_channels.py  test_consumer_handler.py  test_kafka_runtime.py  test_real_senders.py
